--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">EventLocator</string>
     <string name="action_settings">Settings</string>
+    <string name="btnDoSomething">Do Something Now!</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="settings_greeting">Welcome To The Settings!</string>
 </resources>
