--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">EventLocator</string>
     <string name="action_settings">Settings</string>
     <string name="options_settings">Options</string>
+    <string name="results_settings">Results</string>
     <string name="btnDoSomething">Do Something Now!</string>
     <string name="title_activity_settings">Settings Activity</string>
     <string name="title_activity_results">Results Activity</string>
@@ -11,4 +12,5 @@
     <string name="results_greeting">We Found The Following Events</string>
 
     <string name="some_text">SOME OPTIONS --- STRINGS.XML</string>
+    <string name="insideResults">SOME RESULTS --- STRINGS.XML</string>
 </resources>
