--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="results_settings">Results</string>
     <string name="btnDoSomething">Do Something Now!</string>
     <string name="getMyLocation">Get My Location</string>
+    <string name="title_address_settings">Address Activity</string>
     <string name="title_activity_settings">Settings Activity</string>
     <string name="title_activity_results">Results Activity</string>
     <string name="title_activity_options">Options Activity</string>
