--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -3,17 +3,21 @@
     <string name="action_settings">Settings</string>
     <string name="options_settings">Options</string>
     <string name="results_settings">Results</string>
-    <string name="btnDoSomething">Do Something Now!</string>
+    <string name="btnDoSomething">Select This Address</string>
     <string name="getMyLocation">Get My Location</string>
     <string name="title_address_settings">Address Activity</string>
     <string name="title_activity_settings">Settings Activity</string>
     <string name="title_activity_results">Results Activity</string>
     <string name="title_activity_options">Options Activity</string>
+    <string name="whatIsUserAddress">What is Your Address</string>
+    <string name="whatUserWants">What Do You Want To Find</string>
+    <string name="whatWeFound">Here Is What We Found</string>
+
     <string name="settings_greeting">Welcome To The Settings!</string>
     <string name="options_greeting">Choose What You Want To Find</string>
     <string name="results_greeting">We Found The Following Events</string>
 
-    <string name="some_text">SOME OPTIONS --- STRINGS.XML</string>
-    <string name="insideResults">SOME RESULTS --- STRINGS.XML</string>
+    <string name="some_text">What Do You Want To Find</string>
+    <string name="insideResults">Here\'s A List Of What You Want</string>
     <string name="title_activity_maps">Map</string>
 </resources>
