--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="title_activity_results">Results Activity</string>
     <string name="title_activity_options">Options Activity</string>
     <string name="whatIsUserAddress">What is Your Address</string>
-    <string name="whatUserWants">What Do You Want To Find</string>
+    <string name="whatUserWants">Select Locations Below</string>
     <string name="whatWeFound">Here Is What We Found</string>
 
     <string name="settings_greeting">Welcome To The Settings!</string>
@@ -20,4 +20,9 @@
     <string name="some_text">What Do You Want To Find</string>
     <string name="insideResults">Here\'s A List Of What You Want</string>
     <string name="title_activity_maps">Map</string>
+
+
+    <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_main">GridView Demo</string>
 </resources>
