each result shows a zoom-up map of user location and business' on click

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="whatUserWants">Select Locations Below</string>
     <string name="whatWeFound">Here Is What We Found</string>
     <string name="defaultEditBoxText"> Ex: 123 Fake Road, Toronto</string>
+    <string name="title_location_detail">Location Details</string>
+
+
 
 
     <string name="settings_greeting">Welcome To The Settings!</string>
